logs/watchdog_20251011_1845.log
[11/10/2025 18:45:01,73] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[11/10/2025 18:45:02,03] END WATCHDOG 
